# repo-eval

./: .gitignore  LICENSE  README.md  ROADMAP.md  latest-report.html  pyproject.toml
container/: Containerfile
defaults/: checklist.yaml  flyte.yaml
latest-assisted/: findings.json  report.html
latest-assisted/recordings/: 01-setup.cast  02-first_contact.cast  03-cli.cast  04-deps.cast  cli_test.sh  deps.sh  first_contact.sh  readme_example.py  setup.sh
src/repo_eval/: __init__.py  __main__.py  analyze.py  cli.py  config.py  container.py  live.py  models.py  recorder.py  report.py  resolve.py  runner.py  server.py
src/repo_eval/steps/: __init__.py  base.py  cli_test.py  deps.py  examples.py  first_contact.py  introspect.py  setup.py
templates/: app.html  live.html  report.html.j2
